Update dependencies in requirements and lock files
Replaced outdated dependencies with newer versions, including introducing `vellox` and `fastapi` and updating `flask`. Removed unused dependencies such as `uvicorn`, `package`, and others to streamline the environment. This change enhances compatibility and aligns with project requirements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "ezneis==0.1.2",
     "fastapi==0.115.*",
-    "uvicorn[standard]==0.34.*",
+    "vellox==0.1.*",
 ]
