--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "나이스 API 래퍼 ezneis를 이용한 GCP Cloud Run Functions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "functions-framework==3.*",
     "ezneis==0.1.2",
-    "fastapi==0.115.*",
-    "vellox==0.1.*",
 ]
